<resources>
    <string name="app_name">108590002_HW7_04.5</string>

    <string name="pho">Vietnamese Beef Noodle (Pho Bo)</string>
    <string name="pho_des">In the Vietnamese Cuisines, beef noodle soup is a classic.
                           A combination of soft rice vermicelli covered with well spiced smooth beef broth.
                           This clean and well-spiced beef noodle soup are being loved by Vietnamese and being served as a daily meal.
                           Recommend to add any different part of beef for better tasting.</string>

    <string name="com_tam">Vietnamese Broken Rice with Grilled Pork (Com Tam)</string>
    <string name="com_tam_des">Com tam is a really popular rice dish in Vietnamese cuisine.
                               A combination of steamy fragrant broken rice with tender pork cutlet, fresh vegetables, egg meatloaf or fried egg, and carrot pickles.
                               All served on one plate an outstanding fish sauce will excite your taste buds.</string>

    <string name="goi_cuon">Vietnamese Spring Roll (Goi Cuon)</string>
    <string name="goi_cuon_des">Vietnamese Spring Roll is a refreshing appetizer made up of shrimp, pork, thin rice vermicelli noodles, and an assortment of vegetables rolled in rice paper.
                                They are served at room temperature with a side of peanut dipping sauce or alternatively, Vietnamese fish sauce dipping sauce. </string>
</resources>